# c-shared-logger

./: CMakeLists.txt  README.md
SharedMemoryLogger/: CMakeLists.txt
SharedMemoryLogger/include/: SharedMemoryLogger.h
SharedMemoryLogger/src/: SharedMemoryLogger.cpp
example/: CMakeLists.txt
example/log_html_file/: CMakeLists.txt  logFileHtml_ConsumerAnimal.cpp  logFileHtml_ProducerCat.cpp  logFileHtml_ProducerDog.cpp
example/log_json_file/: CMakeLists.txt  logFileJson_ConsumerCar.cpp  logFileJson_ProducerIrankhodro.cpp  logFileJson_ProducerSaipa.cpp
example/log_terminal/: CMakeLists.txt  log_terminal.cpp
example/log_text_file/: CMakeLists.txt  logFileText_ConsumerSports.cpp  logFileText_ProducerFootball.cpp  logFileText_ProducerKungfu.cpp
